fix the invisible bckground

--- a/Css/dark.scss
+++ b/Css/dark.scss
@@ -41,7 +41,7 @@ body.dark {
     }
   }
   .landing {
-    background: url(/Images/landing-02.jpg) center;
+    background: url(../Images/landing-02.jpg) center;
     .intro-text {
       h1 {
         color: var(--midnight-green-eagle-green);
