--- a/Css/leon.css
+++ b/Css/leon.css
@@ -161,7 +161,7 @@ body {
 /* End Header*/
 /*Start Landing Section*/
 .landing {
-  background-image: url(../Images/Landing.jpg);
+  background-image: url(../Images/landing.jpg);
   background-size: cover;
   height: calc(100vh - 64px);
   position: relative;
